--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "scrum/**", ".next", "dist"]
+  "exclude": ["node_modules", "scrum/**", ".next", "dist", "convex/**"]
 }
