--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@whop-apps/sdk": "^0.0.1-canary.117",
     "@whop/api": "^0.0.51",
     "@whop/react": "^0.2.46",
-    "@whop/sdk": "^0.0.1-canary.0",
+    "@whop/sdk": "^0.0.20",
     "ai": "^5.0.68",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "convex": "^1.28.0",
+    "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.545.0",
